# cmake_parorgproject

./: CMakeLists.txt  cuda_dense.cu  cuda_sparse.cu  matmult_basic.c  mpi_dense.c  mpi_sparse.c  openmp_matmult.c  openmp_sparse.c  sparsemult_basic.c
Common/: CMakeLists.txt
tools/: CMakeLists.txt  tools.c  tools.h
